# DaiSpan

./: .gitignore  ARCHITECTURE_IMPROVEMENT_SUMMARY.md  CLAUDE.md  MAIN_LOOP_REFACTORING.md  MEMORY_OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_TEST_PLAN.md  README.md  README_TW.md  TEST_PLAN.md  V3_ARCHITECTURE_TEST_REPORT.md  build_report_20250717_173110.txt  compile_commands.json  homekit_real_control_guide.md  partitions_custom.csv  platformio.ini  test_homekit_events.py  test_real_ac_v3.py  test_real_simple.py  test_v3_event_manual.py  usage_tracking2.json
.claude/: settings.local.json
.kiro/specs/daispan-priority-improvements/: design.md  requirements.md  tasks.md
docs/: AsyncWiFiImplementation.md  FINAL_VALIDATION.md  MemoryOptimization_Design.md  MemoryOptimization_Usage.md
docs/plans/: 2026-03-06-v3-rust-implementation-plan.md  2026-03-06-v3-rust-matter-rewrite-design.md
examples/: MemoryOptimization_Example.cpp
include/: Debug.h  IThermostatControl.h  S21Controller.h  S21Protocol.h  ThermostatController.h  ThermostatDevice.h  ThermostatMode.h
include/architecture_v3/core/: EventSystem.h  EventSystemSimple.h  ServiceContainer.h  ServiceContainerSimple.h
include/architecture_v3/domain/: ConfigDomain.h  ThermostatDomain.h
include/common/: AsyncWiFiScanner.h  Config.h  Debug.h  DebugWebClient.h  LightweightDebugger.h  LogManager.h  MemoryMonitor.h  MemoryOptimization.h  MemoryProfile.h  OTAManager.h  OptimizedRemoteDebugger.h  RemoteDebugger.h  StreamingResponse.h  SystemManager.h  ThermostatMode.h  WebTemplates.h  WebUI.h  WiFiManager.h
include/controller/: IThermostatControl.h  MockThermostatController.h  ThermostatController.h  ThermostatController_Legacy.h
include/core/: EventSystem.h  Result.h  Scheduler.h  ServiceContainer.h  TypeRegistry.h
include/device/: FanDevice.h  SwingDevice.h  ThermostatDevice.h
include/domain/: ConfigDomain.h  ThermostatDomain.h
include/protocol/: ACProtocolFactory.h  IACProtocol.h  IS21Protocol.h  S21Protocol.h  S21ProtocolAdapter.h  S21ProtocolVariants.h  S21Utils.h
notes/: exmaple_cpp.md
notes/Simulators/: faikin-s21  my.settings  s21-control
openspec/: project.md
openspec/changes/archive/2025-10-23-optimize-memory-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-23-remove-unused-artifacts/: proposal.md  tasks.md
openspec/changes/organize-web-interface/: proposal.md  tasks.md
openspec/specs/core-system/: spec.md
openspec/specs/hvac-swing-control/: spec.md
openspec/specs/memory-optimization/: spec.md
openspec/specs/repository-hygiene/: spec.md
scripts/: README.md  build_and_verify.sh  fix_memory_issue.py  long_term_test.py  memory_optimization_test.py  performance_test.py  quick_check.py  resource_monitor.sh  simple_test.py  test_example.py  test_memory_fixes.py  test_pairing_fix.py  v3_event_test.py  v3_functionality_test.py  webserver_diagnostic.py
src/: ACProtocolFactory.cpp  FanDevice.cpp  MemoryProfile.cpp  MockThermostatController.cpp  OptimizedRemoteDebugger.cpp  RemoteDebugger.cpp  S21Controller.cpp  S21Protocol.cpp  S21ProtocolAdapter.cpp  SwingDevice.cpp  SystemManager.cpp  ThermostatController.cpp  ThermostatDevice.cpp  main.cpp
src/core/: Scheduler.cpp
src/migration/: V3MigrationAdapter.h
tests/: README.md  test_async_wifi_scanner.py  test_homekit_v3.py  trigger_v3_events.py
uploads/: XXXNEW_pro_Europe_Warsaw_56636bde-bd1a-4309-92e7-03ea4c75fd79_20250627_131110.json
v2/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
v2/main/: CMakeLists.txt  main.c
v2/main/common/: debug.h  types.h
v2/main/config/: config_manager.c  config_manager.h
v2/main/controller/: thermostat_ctrl.c  thermostat_ctrl.h
v2/main/homekit/: hk_thermostat.c  hk_thermostat.h
v2/main/s21/: s21_protocol.c  s21_protocol.h
v2/main/web/: web_server.c  web_server.h
v2/main/wifi/: wifi_manager.c  wifi_manager.h
v3/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
v3/.cargo/: config-s3.toml  config.toml
v3/src/: lib.rs  main.rs
v3/src/config/: mod.rs
v3/src/controller/: mod.rs  state.rs  task.rs
v3/src/matter/: fan.rs  mod.rs  swing.rs  thermostat.rs
v3/src/s21/: codec.rs  commands.rs  mod.rs  types.rs  uart.rs  version.rs
v3/src/web/: mod.rs  ota.rs  routes.rs
v3/src/wifi/: ap.rs  mod.rs
(+15 files in other folders)
